<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_new"
    tools:context="com.example.android.chemistryquiz.EditTextPart">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layoutEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dim16">

            <ImageView

                android:id="@+id/quizImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim16"
                android:contentDescription="@string/question_picture"
                android:scaleType="fitXY"
                android:src="@drawable/intro1" />


            <TextView
                android:id="@+id/questionNo"
                style="@style/question_ET"
                android:layout_marginLeft="@dimen/dim16"
                android:layout_marginRight="@dimen/dim16"
                android:text="@string/question_number" />

            <TextView
                android:id="@+id/questionText"
                style="@style/question_ET"
                android:layout_margin="@dimen/dim16"
                android:layout_marginLeft="@dimen/dim16"
                android:layout_marginRight="@dimen/dim16"
                android:text="@string/question" />

            <EditText
                android:id="@+id/editTextAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim16"
                android:hint="@string/write_correct_answer" />

        </LinearLayout>

        <Button
            android:id="@+id/help_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/dim16"
            android:onClick="help"
            android:text="@string/help" />

        <Button
            android:id="@+id/question_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/layoutEditText"
            android:layout_margin="@dimen/dim16"
            android:onClick="next"
            android:text="@string/next" />

    </RelativeLayout>

</ScrollView>

