<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_new"
    android:fillViewport="true"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical"
    tools:context="com.example.android.chemistryquiz.Start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim16"
                android:contentDescription="@string/intro_picture"
                android:src="@drawable/intro1" />

            <TextView
                style="@style/question_ET"
                android:layout_margin="@dimen/dim16"
                android:text="@string/intro" />

            <TextView
                style="@style/question_ET"
                android:layout_margin="@dimen/dim16"
                android:text="@string/intro1" />

        </LinearLayout>

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/intro"
            android:layout_centerHorizontal="true"
            android:onClick="start"
            android:text="@string/start" />

    </RelativeLayout>

</ScrollView>

